# iaes

./: .gitignore  IAES_SPEC.md  LICENSE  README.md  pyproject.toml
examples/: alert_fatigue.py  asset-health-ai.json  asset-health-human.json  asset-hierarchy.json  asset-measurement.json  full-flow-v1.1.json  full-flow.json  maintenance-completion.json  recovery-event.json  sensor-registration.json  spare-part-usage.json  vibration_monitor.py  work-order-intent.json
n8n-nodes/: README.md  package-lock.json  package.json  tsconfig.json
n8n-nodes/credentials/: IaesApi.credentials.ts
n8n-nodes/examples/: energy-anomaly-detection.json  predictive-maintenance-pipeline.json
node-red/: README.md  package-lock.json  package.json
node-red/examples/: 01-vibration-monitoring.json  02-power-quality.json  03-ai-health-pipeline.json  04-sparkplug-bridge.json  05-sparkplug-to-mqtt.json
node-red/nodes/: iaes-health.html  iaes-health.js  iaes-measurement.html  iaes-measurement.js  iaes-publish.html  iaes-publish.js  iaes-route.html  iaes-route.js  iaes-sparkplug.html  iaes-sparkplug.js  iaes-validate.html  iaes-validate.js  iaes-work-order.html  iaes-work-order.js
node-red/test/: iaes-nodes.test.js  iaes-publish-route.test.js  (+1 more)
npm/: README.md  package-lock.json  package.json  tsconfig.json
rfc/: IAES-RFC-001.md
schema/: asset-health.schema.json  asset-measurement.schema.json  iaes-envelope.schema.json  maintenance-completion.schema.json  maintenance-work-order-intent.schema.json
tests/: test_client.py  test_cross_language.py  test_models.py  test_validation.py
(+21 files in other folders)
